# cppLibrary

./: CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  Makefile  dynamic_demo.cpp  static_demo.cpp
include/: IMyClass.h
src/: MyClass.cpp  MyClass.h
